# Agentic_class

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-agentic.txt  requirements-dev.txt  requirements-neural.txt  requirements.txt
app/: __init__.py  agentic_graph.py  alarm_codes.py  bad_cases.py  config.py  decision_provider.py  decision_schemas.py  diagnostic_evaluation.py  evaluation.py  evidence.py  main.py  neural.py  ranking.py  retrieval.py  runtime_dirs.py  safety.py  schemas.py  storage.py  tool_runtime.py  tutoring.py  tutoring_evaluation.py  workflow.py
configs/: agentic-online.env  agentic-quality.env  neural-online.env  neural-quality.env  portable.env
data/: README.md
docs/: acceptance-report-2026-07-14.md  acceptance-report-v0.4.0-2026-07-14.md  acceptance-report-v0.5.0-2026-07-15.md  agent-mode-evaluation-protocol.md  architecture.md  bad-case-schema.json  benchmark-baseline.md  data-dictionary.md  demo-guide.md  known-issues.md  openapi.json  project-case-study.md  publication-checklist.md  quickstart.md  tools.md  trace-schema.json  typical-bad-case.md
reports/: agentic_http_smoke_20260714T160059Z.json  agentic_http_smoke_20260714T160740Z.json  comparison_20260714T114720Z.json  comparison_20260714T114720Z.md  diagnosis_controlled_post_hardening_v1.json  diagnosis_controlled_repetition_stability_v1.json  diagnosis_portable_repetition_stability_v1.json  diagnosis_synthetic_50_portable_v1.json  diagnosis_three_way_engineering_raw_v1.json  (+14 more)
scripts/: demo.py  (+26 more)
(+81 files in other folders)
