[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-robot-course-agent"
version = "0.5.0"
description = "工业机器人课程智能助教 Agent 平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-pptx>=1.0,<2",
  "numpy>=1.26,<3",
  "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]
neural = [
  "sentence-transformers>=5,<6",
  "huggingface-hub>=0.30,<2",
]
agentic = [
  "langgraph>=1.1,<2",
  "langchain>=1.2,<2",
  "langchain-openai>=1.1,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["static/*"]
